--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-livestream": "^1.0.11",
     "react-player": "^2.6.1",
     "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.1"
+    "react-scroll": "^1.8.1",
+    "video.js": "^7.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
