--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-audio-player": "^0.13.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-facebook": "^8.1.4",
     "react-instagram-authless-feed": "github:jamesmoriarty/react-instagram-authless-feed#v1.0.2",
     "react-player": "^2.6.1",
     "react-scripts": "3.4.3",
